--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>title</h1>
+    <h1></h1>
+    
   </body>
 </html>
