--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>title</title>
+	<head>
+		<meta charset="UTF-8">
+		<title>仿写02</title>
     <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <h1></h1>
-    
-  </body>
+	</head>
+
+	<body>
+		<div class="headpic">
+			<img src="http://utils.iwebxy.com/placehold/300x226">
+		</div>
+		<div class="intro">
+      <h2 style="color: #9fc5e8;">欢迎来到程大治和胡郁芊的小站</h2>
+			<p style= "font-size: 15px;";>对曾经的我们，这是未来，对现在的我们，这是回忆，对未来的我们，这是永恒。</p>
+		</div>
+		<div class="container">
+			<div class="group" style="background-color: #9fc5e8;">
+				<img src="http://utils.iwebxy.com/placehold/380x270"/>
+				<div class="tcwhite">
+          <div class="line">
+            
+          </div>
+          <div class="headborder01">
+            <h2>水立方 · 小吊梨汤</h2>
+          </div>
+
+					<h5>2016 - 08 - 27</h5>
+					<p>我们一直听说小吊梨汤很好吃，一直没有机会吃到，而水立方旁正好有一家。排队一个半小时，终于坐下时已经饿晕。我们点了梨汤、松鼠鱼和一些甜点吃，倒是真没尝出来到底哪里好吃。也可能是期待太高了。一天下来，很累也很开心。</p>
+
+				</div>
+			</div>
+			<div class="group" style="background-color: #ffffff;">
+				<img src="http://utils.iwebxy.com/placehold/380x270"/>
+				<div class="tcblack">
+					<h2>水立方 · 嬉水乐园</h2>
+					<h5>2016 - 08 - 27</h5>
+					<p>深海龙卷风让我印象深刻，四个人一个皮划艇，几乎垂直的一段下落，虽然眼睛进了水，还是感觉很爽。水立方小孩子很多，带着游泳圈在冲浪池里漂来漂去。大治尝试了最恐怖的红色滑道，听说起点宛如太空舱。我们玩了很多次双人的滑道，还是比较缓和的更适合我。</p>
+				</div>
+			</div>
+			<div class="group" style="background-color: #332f2f;">
+				<img src="http://utils.iwebxy.com/placehold/380x270"/>
+				<div class="tcwhite">
+					<h2 style="color: #f0950b;">西单</h2>
+					<h5>2016 - 08 - 06</h5>
+					<p>我们暑期实习都已进行了一个月，拿到了人生中的第一份工资。在生日前夕，大治带我去西单买支口红作为我19岁的生日礼物。高三时他拿到第一桶金后带我去吃泰厨，那是我吃得最认真的一顿饭，他愿意为我付出他自己努力了很久的成果，让我觉得自己真的很幸福。</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
